# terminal-file-manager

./: .gitignore  CMakeLists.txt  README.md  main.c
extensions/: build_so.sh  config.txt  gzip.c  vim.c
inc/: color_codes.h  columns.h  config.h  files.h  fm_impl.h  terminal.h  utils.h
src/: CMakeLists.txt  columns.c  config.c  files.c  fm_impl.c  terminal.c
